Clean up imports